# airflow-practice

./: .gitignore  pyproject.toml
src/dags/: my_first_dag.py  save_most_wikipedia_views.py
